data/derived/comb/progs/unify/prog5652.ml.out
Characters 85-86:
  else 1 + sumList(n - 1);;
                   ^
Error: This expression has type 'a array
       but an expression was expected of type int
